# ml-training-pipeline

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  run_train.py
configs/: default.yaml
data/: sample.csv
docs/: design.md  notes.md
scripts/: run_all.sh
src/: __init__.py  data.py  evaluator.py  model.py  train.py  trainer.py
utils/: logger.py  metrics.py  report_generator.py
